--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                         </div>
                     </div>
                 </div>
-                <form action="" method="" class="contact__form">
+                <form  id="myForm" class="contact__form">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="name" class="contact__label">Name</label>
@@ -672,10 +672,10 @@
                         <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
                     </div>
                     <div>
-                        <a type="submit" class="button button--flex">
+                        <button type="submit" class="button button--flex">
                             Send Message
                             <i class="uil uil-message button__icon"></i>
-                        </a>
+                        </button>
                     </div>
 
                 </form>
