--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/perfil.png" />
+                                <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/perfil.webp" />
                             </g>
                         </svg>
                     </div>
@@ -172,7 +172,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Frontend developer</h1>
-                                <span class="skills__subtitle">More than 1 year</span>
+                                <span class="skills__subtitle">More than 2 year</span>
                             </div>
                             <i class="uil uil-angle-down skills__icon skills__arrow"></i>
                         </div>
@@ -226,7 +226,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__title">
-                                    <h3 class="skills__names">Node JS</h3>
+                                    <h3 class="skills__names">Api rest development using FastApi</h3>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__node"></span>
@@ -244,7 +244,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">API operations</h3>
+                                    <h3 class="skills__name">Node Js</h3>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__api"></span>
@@ -536,7 +536,7 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Design according the customer needs.</p>
+                                    <p>IT/Security systems design according customer needs.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
