fixed height iamges

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>IT/Security systems design according customer needs.</p>
                                 </li>
-                                <li class="services__modal-service">
+                               portfolio__content  <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>BIM and MEP proyect design</p>
                                 </li>
@@ -561,7 +561,7 @@
                 <div class="swiper-wrapper">
                     <!-- portfolio 1 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio4.webp" alt="protfolio image" decoding="async" loading="lazy">
+                        <img src="assets/img/portfolio4.webp" alt="protfolio image" decoding="async" loading="lazy" class="portfolio__img" >
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Recipes App</h3>
                             <p class="portfolio__description">Modern recipes app and shopping list made with Angular, using firebase services for realtime database and authentication.</p>
@@ -573,7 +573,7 @@
                     </div>
                     <!-- portfolio 2 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio3.webp" alt="protfolio image" decoding="async" loading="lazy">
+                        <img src="assets/img/portfolio3.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Modern Website</h3>
                             <p class="portfolio__description">Social network for dog's owners. Made with bootstrap with responsive design.</p>
@@ -585,7 +585,7 @@
                     </div>
                     <!-- portfolio 3 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio2.webp" alt="protfolio image" decoding="async" loading="lazy">
+                        <img src="assets/img/portfolio2.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">To-Do App</h3>
                             <p class="portfolio__description">App made with EJS template, you can create custom lists based on the ingresed URL. Storing the data with MongoDB.</p>
@@ -597,7 +597,7 @@
                     </div>
                     <!-- portfolio 4 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.webp" alt="protfolio image" decoding="async" loading="lazy">
+                        <img src="assets/img/portfolio1.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Newsletter Signup</h3>
                             <p class="portfolio__description">Newlleter form made with bootstrap, using Mailchimp API to manage the susbcribers.</p>
