added work experience

--- a/index.html
+++ b/index.html
@@ -395,11 +395,11 @@
                             </div>
                             <div>
 
-                                <h3 class="qualification__title">Technical Service</h3>
-                                <span class="qualification__subtitle">CONDUSEF</span>
+                                <h3 class="qualification__title">Proyect Engineer</h3>
+                                <span class="qualification__subtitle">Sacmag de México<</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2018
+                                    2016-2020
                                 </div>
                             </div>
 
@@ -408,11 +408,11 @@
                         <div class="qualification__data">
 
                             <div>
-                                <h3 class="qualification__title">Proyect Engineer</h3>
-                                <span class="qualification__subtitle">Sacmag de México</span>
+                                <h3 class="qualification__title">A Engineer</h3>
+                                <span class="qualification__subtitle">Epesa</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2016-2020
+                                    2020-2021
                                 </div>
                             </div>
                             <div>
@@ -429,11 +429,11 @@
                                 <!-- <span class="qualification__line"></span> -->
                             </div>
                             <div>
-                                <h3 class="qualification__title">Engineer A</h3>
-                                <span class="qualification__subtitle">EPESA</span>
+                                <h3 class="qualification__title">Front End Developer </h3>
+                                <span class="qualification__subtitle">Zitus Asset</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2020-2021
+                                    2021 - present
                                 </div>
                             </div>
 
@@ -575,9 +575,9 @@
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/portfolio3.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Modern Website</h3>
-                            <p class="portfolio__description">Social network for dog's owners. Made with bootstrap with responsive design.</p>
-                            <a href="https://itgeeky.github.io/TinDog/" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Next JS Modern Properties Website</h3>
+                            <p class="portfolio__description">NextJS app made for rent or buy a hause, working with bayut API.</p>
+                            <a href="https://real-state-app-hazel.vercel.app/" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -587,9 +587,9 @@
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/portfolio2.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">To-Do App</h3>
-                            <p class="portfolio__description">App made with EJS template, you can create custom lists based on the ingresed URL. Storing the data with MongoDB.</p>
-                            <a href="https://morning-brook-79202.herokuapp.com/" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">React Dashboard Full-Stack</h3>
+                            <p class="portfolio__description">App made with react, backend developed with node, using mongoDB.</p>
+                            <a href="https://properties-dash-ref.netlify.app/" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -599,9 +599,9 @@
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/portfolio1.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Newsletter Signup</h3>
-                            <p class="portfolio__description">Newlleter form made with bootstrap, using Mailchimp API to manage the susbcribers.</p>
-                            <a href="https://fast-stream-18947.herokuapp.com/" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Travel Advisor App</h3>
+                            <p class="portfolio__description">App made with react, using rapidAPI and google maps we can get restaurants, hotels and recomendend attractions to visit.</p>
+                            <a href="https://travel-advisor-geeky.netlify.app/" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
