--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Carlos</h1>
-                        <h3 class="home__subtitle">A Web Developer</h3>
+                        <h1 class="home__subtitle">A Web Developer</h1>
                         <p class="home__description">Experience in IT and security proyects, love to code and learning. Always doing my best.  </p>
                         <a href="#contact" class="button button--flex">
                             Contact Me<i class="uil uil-message button__icon"></i>
@@ -131,7 +131,7 @@
             <h2 class="section__title">About Me</h2>
             <span class="section__subtitle">My Introduction</span>
             <div class="about__container grid container">
-                <img src="assets/img/about.webp" alt="protfolio image" decoding="async" loading="lazy">
+                <img src="https://res.cloudinary.com/dnphw1t2z/image/upload/v1689712671/about_trycrm.webp" alt="protfolio image" width="" height="" decoding="async" loading="lazy">
                 <div class="about__data">
                     <p class="about__description">I started my profesional carrer in consulting area, related with telecommunications and security proyects,
                         enthusiastic about technology. I'm a self-taught person, always learning. 
@@ -179,7 +179,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">HTML</h3>
+                                    <h1 class="skills__name">HTML</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__html"></span>
@@ -188,7 +188,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__names">CSS</h3>
+                                    <h1 class="skills__name">CSS</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__css"></span>
@@ -197,7 +197,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">JavaScript</h3>
+                                    <h1 class="skills__name">JavaScript</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__js"></span>
@@ -206,7 +206,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Angular</h3>
+                                    <h1 class="skills__name">React JS</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__angular"></span>
@@ -219,14 +219,14 @@
                             <i class="uil uil-server-alt skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Backend developer</h1>
-                                <span class="skills__subtitle">More than 6 months</span>
+                                <span class="skills__subtitle">More than 8 months</span>
                             </div>
                             <i class="uil uil-angle-down skills__icon skills__arrow"></i>
                         </div>
                         <div class="skills__list grid">
                             <div class="skills__data">
-                                <div class="skills__title">
-                                    <h3 class="skills__names">Api rest development using FastApi</h3>
+                                <div class="skills__titles">
+                                    <h1 class="skills__name">Api rest development using FastApi</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__node"></span>
@@ -235,7 +235,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Firebase</h3>
+                                    <h1 class="skills__name">Firebase</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__firebase"></span>
@@ -244,7 +244,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Node Js</h3>
+                                    <h1 class="skills__name">Node Js</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__api"></span>
@@ -253,7 +253,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Database (SQL-noSQL)</h3>
+                                    <h1 class="skills__name">Database (SQL-noSQL)</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__database"></span>
@@ -276,7 +276,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Telecomunications proyects</h3>
+                                    <h1 class="skills__name">Telecomunications proyects</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__node"></span>
@@ -285,7 +285,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">National and international IT standards</h3>
+                                    <h1 class="skills__name">National and international IT standards</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__firebase"></span>
@@ -294,7 +294,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Security proyects(CCTV and Access Control)</h3>
+                                    <h1 class="skills__name">Security proyects(CCTV and Access Control)</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__api"></span>
@@ -303,7 +303,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Autodesk Suite</h3>
+                                    <h1 class="skills__name">Autodesk Suite</h1>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__database"></span>
@@ -561,7 +561,7 @@
                 <div class="swiper-wrapper">
                     <!-- portfolio 1 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio4.webp" alt="protfolio image" decoding="async" loading="lazy" class="portfolio__img" >
+                        <img src="https://res.cloudinary.com/dnphw1t2z/image/upload/v1689712671/portfolio4_oohmpz.webp" width="320" height="180" alt="protfolio image" decoding="async" loading="lazy" class="portfolio__img" >
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Recipes App</h3>
                             <p class="portfolio__description">Modern recipes app and shopping list made with Angular, using firebase services for realtime database and authentication.</p>
@@ -573,7 +573,7 @@
                     </div>
                     <!-- portfolio 2 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio3.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
+                        <img src="https://res.cloudinary.com/dnphw1t2z/image/upload/v1689712671/portfolio3_kt6tth.webp" width="320" height="180" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Next JS Modern Properties Website</h3>
                             <p class="portfolio__description">NextJS app made for rent or buy a hause, working with bayut API.</p>
@@ -585,7 +585,7 @@
                     </div>
                     <!-- portfolio 3 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio2.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
+                        <img src="https://res.cloudinary.com/dnphw1t2z/image/upload/v1689712671/portfolio2_zayefi.webp" width="320" height="180" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">React Dashboard Full-Stack</h3>
                             <p class="portfolio__description">App made with react, backend developed with node, using mongoDB.</p>
@@ -597,7 +597,7 @@
                     </div>
                     <!-- portfolio 4 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.webp" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
+                        <img src="https://res.cloudinary.com/dnphw1t2z/image/upload/v1689712672/portfolio1_neh5li.webp" width="320" height="180" alt="protfolio image" decoding="async" loading="lazy"  class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Travel Advisor App</h3>
                             <p class="portfolio__description">App made with react, using rapidAPI and google maps we can get restaurants, hotels and recomendend attractions to visit.</p>
@@ -706,13 +706,13 @@
                     </li>
                 </ul>
                 <div class="footer__socials">
-                    <a href="https://www.facebook.com/sObrinoooo" target="_blank" class="footer__social">
+                    <a href="https://www.facebook.com/sObrinoooo" target="_blank" class="footer__social" aria-label="facebook">
                         <i class="uil uil-facebook-f"></i>
                     </a>
-                    <a href="https://twitter.com/car_aspp" target="_blank"class="footer__social">
+                    <a href="https://twitter.com/car_aspp" target="_blank"class="footer__social" aria-label="Twitter">
                         <i class="uil uil-twitter-alt"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/carlos-soto-a4906898/" target="_blank" class="footer__social">
+                    <a href="https://www.linkedin.com/in/carlos-soto-a4906898/" target="_blank" class="footer__social" aria-label="Linkedin">
                         <i class="uil uil-linkedin-alt"></i>
                     </a>
                 </div>
@@ -725,7 +725,7 @@
     </footer>
 
     <!--==================== SCROLL TOP ====================-->
-    <a href="#" class="scrollup" id="scroll-up">
+    <a href="#" class="scrollup" id="scroll-up" aria-label="up">
         <i class="uil uil-arrow-circle-up scroll__icon"></i>
     </a>
 
