--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>IT/Security systems design according customer needs.</p>
                                 </li>
-                               portfolio__content  <li class="services__modal-service">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>BIM and MEP proyect design</p>
                                 </li>
