--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Recipes App</h3>
                             <p class="portfolio__description">Modern recipes app and shopping list made with Angular, using firebase services for realtime database and authentication.</p>
-                            <a href="https://recipes-app-final.web.app/auth" class="button button--flex button--small portfolio__button">
+                            <a target='_blank' href="https://recipes-app-final.web.app/auth" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -577,7 +577,7 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Next JS Modern Properties Website</h3>
                             <p class="portfolio__description">NextJS app made for rent or buy a hause, working with bayut API.</p>
-                            <a href="https://real-state-app-hazel.vercel.app/" class="button button--flex button--small portfolio__button">
+                            <a target='_blank' href="https://real-state-app-hazel.vercel.app/" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -589,7 +589,7 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">React Dashboard Full-Stack</h3>
                             <p class="portfolio__description">App made with react, backend developed with node, using mongoDB.</p>
-                            <a href="https://properties-dash-ref.netlify.app/" class="button button--flex button--small portfolio__button">
+                            <a target='_blank' href="https://properties-dash-ref.netlify.app/" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -601,7 +601,7 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Travel Advisor App</h3>
                             <p class="portfolio__description">App made with react, using rapidAPI and google maps we can get restaurants, hotels and recomendend attractions to visit.</p>
-                            <a href="https://travel-advisor-geeky.netlify.app/" class="button button--flex button--small portfolio__button">
+                            <a target='_blank' href="https://travel-advisor-geeky.netlify.app/" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
